CI doesn't know recent stream() grammar